<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.deividst</groupId>
    <artifactId>cnab240Struct</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.testing.compile</groupId>
            <artifactId>compile-testing</artifactId>
            <version>0.21.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>6.0.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>

                <executions>
                    <!-- fase 1: compilar apenas o processor -->
                    <execution>
                        <id>compile-processor</id>
                        <phase>generate-sources</phase>

                        <goals>
                            <goal>compile</goal>
                        </goals>

                        <configuration>
                            <includes>
                                <include>**/CnabProcessor.java</include>
                                <include>**/CnabField.java</include>
                                <include>**/FieldType.java</include>
                            </includes>

                            <proc>none</proc>

                        </configuration>
                    </execution>

                    <!-- fase 2: compilar o resto usando o processor -->
                    <execution>
                        <id>compile-main</id>
                        <phase>compile</phase>

                        <goals>
                            <goal>compile</goal>
                        </goals>

                        <configuration>

                            <annotationProcessors>
                                <annotationProcessor>
                                    com.github.deividst.processor.CnabProcessor
                                </annotationProcessor>
                            </annotationProcessors>

                        </configuration>
                    </execution>

                </executions>

            </plugin>

        </plugins>
    </build>


</project>